# evo_homework

./: CMakeLists.txt  README.md
include/: agregator.hpp  generator.hpp  processor.hpp  ts_queue.hpp
src/: agregator.cpp  generator.cpp  main.cpp  processor.cpp
